...
        <Stack.Navigator screenOptions={getAppStackScreenOptions(colors)}>
          <Stack.Screen name="Home" component={HomeScreen} options={{ title: 'Trene' }} />
          <Stack.Screen name="Workout" component={WorkoutScreen} options={{ title: 'Treningsøkt' }} />
          <Stack.Screen name="CompletedWorkout" component={CompletedWorkoutScreen} options={{ title: 'Fullført trening' }} />
          <Stack.Screen name="History" component={HistoryScreen} options={{ title: 'Tidligere treninger' }} />
          <Stack.Screen name="Exercises" component={ExercisesScreen} options={{ title: 'Øvelser' }} />
          <Stack.Screen name="Settings" component={SettingsScreen} options={{ title: 'Innstillinger' }} />
          <Stack.Screen name="Appearance" component={AppearanceScreen} options={{ title: 'Utseende' }} />
          <Stack.Screen name="ActiveWorkoutVisibility" component={ActiveWorkoutVisibilityScreen} options={{ title: 'Notifikasjoner' }} />
          <Stack.Screen name="Data" component={DataScreen} options={{ title: 'Dine data' }} />
          <Stack.Screen name="DeleteTrainingData" component={DeleteTrainingDataScreen} options={{ title: 'Slett treningsdata' }} />
          <Stack.Screen
            name="ExercisePicker"
...
